Refactor Client and DefaultSubscriptionRegistry for improved concurrency and performance; update SseEventBus for better error handling and logging; enhance tests for subscriber assertions.